--- a/html/composer.json
+++ b/html/composer.json
@@ -14,7 +14,9 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "ramsey/uuid": "^4.7"
+        "livewire/livewire": "^2.12",
+        "ramsey/uuid": "^4.7",
+        "simplesoftwareio/simple-qrcode": "~4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
