--- a/html/composer.json
+++ b/html/composer.json
@@ -16,7 +16,9 @@
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.12",
         "ramsey/uuid": "^4.7",
-        "simplesoftwareio/simple-qrcode": "~4"
+        "simplesoftwareio/simple-qrcode": "~4",
+        "symfony/http-client": "^6.2",
+        "symfony/postmark-mailer": "^6.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
